--- a/flowers/index.html
+++ b/flowers/index.html
@@ -15,7 +15,7 @@
             <div class="lid two"></div>
             <div class="envelope"></div>
             <div class="letter">
-                <p>Happy Valentine's Day ❤️</p>
+                <p>Flowers For You</p>
             </div>
         </div>
         <div class="buttons">
